--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -1,35 +1,55 @@
 name: Image Translator Django CI
 
+# Виправлено синтаксис запуску
 on:
-  - push
-  - pull_request
-
+  push:
+    branches: [ "main" ] # Запускати для гілки main
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   test:
 
     runs-on: ${{ matrix.os }}
     strategy:
+
+      fail-fast: false
       max-parallel: 4
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+
+        os: [ubuntu-latest]
         python-version: ["3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+
+    - name: Install Tesseract
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y tesseract-ocr
+
     - name: Install Dependencies
       run: |
         python -m pip install pipenv
+        # Використовуємо pipenv для запуску команд у правильному середовищі
         pipenv install --dev
-    - name: Check migrations
+
+    - name: Run linter (flake8)
       run: |
-        python src/manage.py makemigrations
-        python src/manage.py migrate
-        python src/manage.py check
+        pipenv run flake8 .
+
     - name: Run Tests
+
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
       run: |
-        python src/manage.py test && flake8
+        echo "$GOOGLE_APPLICATION_CREDENTIALS_JSON" > google-credentials.json
+        export GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/google-credentials.json
+        pipenv run python src/manage.py test
